Deploy/k8s/1-deployment-vite.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vite-deployment
  namespace: dev
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vite-react-app
  template:
    metadata:
      labels:
        app: vite-react-app
    spec:
      containers:
        - name: vite-react-app
          image: panchanandevops/vite-react-app:panchanandevops/vite-react-app:2.3.8
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
